fixed alignment in Welcome page

--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,9 @@
 
 .nav{
   width:100%;
-  display:contents;
+  display:grid!important;
+  grid-template-columns:20% 80%;
   position:relative;
-  margin:0px; padding:0px;
-  justify-content: space-between;
-  flex:1;
 }
 
 .nav-container-dark{
@@ -269,31 +267,36 @@
 }
 
 .welcome{
-  display:grid; position:relative;
+  display:block;
+  position:relative;
   background-color: inherit;
-  justify-content: space-around;
 }
 
 .welcome-container{
   display:block;
+  width:100%;
   position:relative;
-  margin:6vh 0px;
+  margin:6vh 10% 20px 10%;
   padding:0px;
   align-items: center;
 }
 
 .welcome-headerText{
-  display: block;
+  display:contents;
   font-size-adjust: auto;
-  padding:0px 0px 20px 0px;
-  margin:0px;
+  padding:0px 0px 20px 20px;
+  margin:20px 0px 20px 0px;
+}
+
+.small{
+  margin:20px 0px 30px 0px!important;
 }
 
 .welcome-dashboard{
   display:grid;
   grid-gap:5px;
   grid-template-columns:repeat(2, 50%);
-  padding:50px; margin:0px;
+  padding:50px; margin:0px 10% 0px 10%;
   background-color: #DBD8F6;
   border-radius: 30px;
 }
